Solucion de errores en CORS, Creacion de una nueva base de datos que contemple todos los datos necesarios

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,70 @@
-# Configuración de Base de Datos
+# ==============================================
+# TNA Office API - Variables de Entorno
+# ==============================================
+# INSTRUCCIONES:
+# 1. Copiar este archivo como .env
+# 2. Modificar los valores segun tu entorno
+# 3. NUNCA subir el archivo .env a git
+# ==============================================
+
+# ------------------------------------------
+# Configuracion de Base de Datos (REQUERIDO)
+# ------------------------------------------
+# Formato: mysql+pymysql://USUARIO:PASSWORD@HOST:PUERTO/NOMBRE_DB
+#
+# Ejemplo local:
+# DATABASE_URL=mysql+pymysql://root:password@localhost:3306/tna_office_db
+#
+# Ejemplo cPanel (usa los datos de MySQL Databases):
+# DATABASE_URL=mysql+pymysql://cpaneluser_dbuser:tu_password@localhost:3306/cpaneluser_tnaoffice
+#
 DATABASE_URL=mysql+pymysql://USUARIO:PASSWORD@localhost:3306/tna_office_db
 
-# Clave secreta para JWT (cambiar por una clave segura)
-JWT_SECRET=cambia-esto-por-una-clave-muy-segura-y-larga
+# ------------------------------------------
+# Seguridad JWT (REQUERIDO - CAMBIAR EN PRODUCCION)
+# ------------------------------------------
+# Genera una clave segura con: python -c "import secrets; print(secrets.token_hex(32))"
+# IMPORTANTE: Usa una clave diferente para produccion
+#
+JWT_SECRET=cambia-esto-por-una-clave-muy-segura-y-larga-de-al-menos-64-caracteres
 
-# Orígenes permitidos para CORS (tu dominio)
-CORS_ORIGINS=https://tu-dominio.com
+# Tiempo de expiracion del token en minutos (default: 480 = 8 horas)
+JWT_EXPIRATION_MINUTES=480
+
+# ------------------------------------------
+# CORS - Origenes Permitidos (REQUERIDO)
+# ------------------------------------------
+# Lista de dominios permitidos separados por coma
+# IMPORTANTE: Incluir el dominio del frontend sin / al final
+#
+# Ejemplo desarrollo:
+# CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+#
+# Ejemplo produccion:
+# CORS_ORIGINS=https://tu-dominio.com,https://www.tu-dominio.com
+#
+CORS_ORIGINS=http://localhost:5173
+
+# ------------------------------------------
+# Configuracion del Servidor (OPCIONAL)
+# ------------------------------------------
+# Puerto para desarrollo local (default: 8001)
+PORT=8001
+
+# Modo de debug (true/false) - Desactivar en produccion
+DEBUG=false
+
+# Nivel de logging (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# ------------------------------------------
+# Configuracion de Base de Datos Avanzada
+# ------------------------------------------
+# Tamaño del pool de conexiones
+DB_POOL_SIZE=5
+
+# Maximo de conexiones overflow
+DB_MAX_OVERFLOW=10
+
+# Tiempo de reciclaje de conexiones en segundos
+DB_POOL_RECYCLE=3600
