Actualizacion de scripts, se quita el script de emergen

--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ DATABASE_URL=mysql+pymysql://root@localhost:3306/tna_office_db
 JWT_SECRET=tna-office-jwt-secret-key-2024-super-secure-change-in-production
 
 # Orígenes permitidos para CORS (tu dominio)
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173
