--- a/frontend/.env
+++ b/frontend/.env
@@ -1,43 +1,18 @@
 # ==============================================
 # TNA Office Frontend - Variables de Entorno
 # ==============================================
-# INSTRUCCIONES:
-# 1. Copiar este archivo como .env
-# 2. Modificar los valores segun tu entorno
-# 3. Reiniciar el servidor de desarrollo despues de cambios
-# 4. NUNCA subir el archivo .env a git
-# ==============================================
-#
-# IMPORTANTE: En Vite, las variables deben comenzar con VITE_
-# para estar disponibles en el codigo del cliente.
+# IMPORTANTE: En Create React App, las variables deben
+# comenzar con REACT_APP_ para estar disponibles.
 # ==============================================
 
-# ------------------------------------------
-# URL de la API Backend (REQUERIDO)
-# ------------------------------------------
-# URL completa del backend incluyendo /api
-#
-# Desarrollo local:
-# VITE_API_URL=http://localhost:8001/api
-#
-# Produccion (ejemplo):
-# VITE_API_URL=https://api.tu-dominio.com/api
-# VITE_API_URL=https://tu-dominio.com/api
-#
-VITE_API_URL=http://localhost:8001/api
+# URL de la API Backend
+REACT_APP_API_URL=http://localhost:8001/api
 
-# ------------------------------------------
-# Modo de la aplicacion (OPCIONAL)
-# ------------------------------------------
-# development | production
-VITE_APP_MODE=development
+# Modo de la aplicacion
+REACT_APP_MODE=development
 
-# ------------------------------------------
-# Nombre de la aplicacion (OPCIONAL)
-# ------------------------------------------
-VITE_APP_NAME=TNA Office
+# Nombre de la aplicacion
+REACT_APP_NAME=TNA Office
 
-# ------------------------------------------
-# Version de la aplicacion (OPCIONAL)
-# ------------------------------------------
-VITE_APP_VERSION=1.0.0
+# Version de la aplicacion
+REACT_APP_VERSION=1.0.0
