preparando archivos para despliegue

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,10 @@
 # Configuración de Base de Datos
-DATABASE_URL=mysql+pymysql://root@localhost:3306/tna_office_db
+DATABASE_URL=mysql+pymysql://tnaoffice_user:;Sp;wC%5.cdt,9Yi@localhost:3306/tnaoffice_db
 
 # Clave secreta para JWT (cambiar por una clave segura)
-JWT_SECRET=tna-office-jwt-secret-key-2024-super-secure-change-in-production
+JWT_SECRET=TNA_Office_2026_Clave_Super_Secreta_#99_xyz
 
 # Orígenes permitidos para CORS (tu dominio)
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173
+CORS_ORIGINS=https://tna-office.cl,https://www.tna-office.cl,https://api.tna-office.cl
+
+DEBUG=false
