--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ pydantic[email]>=2.10.0
 
 # Autenticacion JWT
 python-jose[cryptography]>=3.3.0
+bcrypt>=4.0.0
 passlib[bcrypt]>=1.7.4
 PyJWT>=2.8.0
 
