Correciones, correciones y mas correciones...

--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ DATABASE_URL=mysql+pymysql://tnaoffice_user:;Sp;wC%5.cdt,9Yi@localhost:3306/tnao
 JWT_SECRET=TNA_Office_2026_Clave_Super_Secreta_#99_xyz
 
 # Orígenes permitidos para CORS (tu dominio)
-CORS_ORIGINS=https://tna-office.cl,https://www.tna-office.cl,https://api.tna-office.cl
+CORS_ORIGINS=https://tnagroup.cl,https://www.tnagroup.cl,https://api.tnagroup.cl
 
 DEBUG=false
