--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,7 +7,7 @@
 
 # URL de la API Backend
 # Opción A: Si usas subdominio api.tudominio.com
-REACT_APP_API_URL=https://api.tna-office.cl/api
+REACT_APP_API_URL=/api
 
 # Opción B: Si usas subdirectorio tudominio.com/api
 # REACT_APP_API_URL=https://TU-DOMINIO.com/api
